kubernetes/prod/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: prod
spec:
  basicAuth:
    secret: basic-auth-secret
