kubernetes/prod/backend-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      color: blue
  template:
    metadata:
      labels:
        app: backend
        color: blue
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/chr-devops/app-backend:main-05b7a37a6e161387a6baec146e5928f577d61457
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          startupProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
