kubernetes/prod/backend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      color: green
  template:
    metadata:
      labels:
        app: backend
        color: green
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/chr-devops/app-backend:main-de294bdb9a661658f91c3d0a4a65fac2c68771e6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          startupProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
