kubernetes/prod/frontend-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      color: blue
  template:
    metadata:
      labels:
        app: frontend
        color: blue
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/chr-devops/app-frontend:main-87435108e05888a93a37a5d1ebd83e37a6894451
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
