kubernetes/prod/frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      color: green
  template:
    metadata:
      labels:
        app: frontend
        color: green
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/chr-devops/app-frontend:main-e0a61e68d16ef9f24aae10730ac71804668eca01
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
