kubernetes/prod/active-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-active
  namespace: prod
spec:
  selector:
    app: backend
    color: blue
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
