kubernetes/prod/active-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-active
  namespace: prod
spec:
  selector:
    app: frontend
    color: blue
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
