kubernetes/prod/backend-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-blue
  namespace: prod
spec:
  selector:
    app: backend
    color: blue
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
