kubernetes/prod/backend-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-green
  namespace: prod
spec:
  selector:
    app: backend
    color: green
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
