kubernetes/prod/backend-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-preview
  namespace: prod
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
