kubernetes/prod/frontend-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-green
  namespace: prod
spec:
  selector:
    app: frontend
    color: green
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
