kubernetes/prod/frontend-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
  namespace: prod
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
